fix nav items on mobile

--- a/src/assets/sass/_menu.scss
+++ b/src/assets/sass/_menu.scss
@@ -151,6 +151,8 @@ nav {
   }
 }
 
+/* RESPONSIVE FOR TABLETS */
+
 @media (max-width: 992px) {
   .full-page-menu {
     flex-direction: column;
@@ -185,6 +187,18 @@ nav {
         height: auto;
         width: 100%;
       }
+    }
+  }
+}
+
+/* RESPONSIVE FOR MOBILE */
+
+@media (max-width: 768px) {
+  .navbar-nav {
+    flex-direction: row;
+
+    .nav-item {
+      margin-left: 6px;
     }
   }
 }
