--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -161,3 +161,16 @@ button, .stc-btn {
 .align-right {
   text-align: right;
 }
+
+/* RESPONSIVE FOR TABLETS */
+
+@media (max-width: 992px) {
+}
+
+/* RESPONSIVE FOR MOBILE */
+
+@media (max-width: 768px) {
+  .hide-on-mobile {
+    display: none;
+  }
+}
